syntax = "proto3";

package bridge;
option go_package = "github.com/roaminroe/koinos-bridge-validator/bridge_pb";

message metadata {
    string last_ethereum_block_parsed = 1;
}

message transaction {
    string id = 1;
    string op_id = 2;
    string from = 3;
    string eth_token = 4;
    string koinos_token = 5;
    string amount = 6;
    string recipient = 7;
    string hash = 8;
    repeated string signatures = 9;
}

enum action_id {
    reserved_action = 0;
    add_validator = 1;
    remove_validator = 2;
    add_supported_token = 3;
    remove_supported_token = 4;
    add_supported_wrapped_token = 5;
    remove_supported_wrapped_token = 6;
    set_pause = 7;
    complete_transfer = 8;
}

message complete_transfer_hash {
    action_id action = 1;
    bytes transaction_id = 2;
    bytes token = 3;
    bytes recipient = 4;
    uint64 amount = 5;
    bytes contract_id = 6;
}