syntax = "proto3";

package bridge;
option go_package = "github.com/roaminroe/koinos-bridge-validator/bridge_pb";


import "koinos/rpc/rpc.proto";
import "proto/bridge.proto";

message get_ethereum_transaction_request {
   string transaction_id = 1;
}

message get_ethereum_transaction_response {
   bridge.transaction transaction = 1;
}

message bridge_request {
   oneof request {
    koinos.rpc.reserved_rpc reserved = 1;
    get_ethereum_transaction_request get_ethereum_transaction = 2;
   }
}

message bridge_response {
   oneof response {
      koinos.rpc.reserved_rpc reserved = 1;
      koinos.rpc.error_response error = 2;
      get_ethereum_transaction_response get_ethereum_transaction = 3;
   }
}